// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders with label 1`] = `
<div
  className=""
  style={{}}
>
  <label
    style={{}}
  >
    Foo
  </label>
  <p>
    Text above
  </p>
  <input
    name="test"
    onBlur={[Function]}
    onChange={[Function]}
    onKeyPress={[Function]}
    readOnly={false}
    style={{}}
    type="text"
    value=""
  />
  <p>
    Text below
  </p>
</div>
`;

exports[`renders with no label 1`] = `
<div
  className=""
  style={{}}
>
  <p>
    Text above
  </p>
  <input
    name="test"
    onBlur={[Function]}
    onChange={[Function]}
    onKeyPress={[Function]}
    readOnly={false}
    style={{}}
    type="text"
    value=""
  />
  <p>
    Text below
  </p>
</div>
`;

exports[`renders with other props 1`] = `
<div
  className="className"
  style={
    {
      "color": "#fff",
    }
  }
>
  <label
    className="labelClassName"
    htmlFor="labelFor"
    style={
      {
        "color": "#000",
      }
    }
  >
    Foo
  </label>
  <p>
    Blah
  </p>
</div>
`;
